[UPDATE] Contract, ReadyListeners